--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath "io.ratpack:ratpack-gradle:1.6.1"
+    classpath "io.ratpack:ratpack-gradle:1.9.0"
     classpath "com.github.jengelman.gradle.plugins:shadow:2.0.4"
   }
 }
@@ -19,15 +19,26 @@ repositories {
 
 dependencies {
 
-  compile 'org.pac4j:ratpack-pac4j:3.0.0'
-  compile 'org.pac4j:pac4j-http:3.3.0'
-  compile 'org.pac4j:pac4j-jwt:3.3.0'
+// implementation ratpack.dependency('pac4j') // not needed
+  implementation 'org.pac4j:ratpack-pac4j:3.0.0'
+  // implementation 'org.pac4j:pac4j-core:3.9.0'
+  implementation 'org.pac4j:pac4j-http:3.9.0'
+  implementation 'org.pac4j:pac4j-jwt:3.9.0'
+
+  testImplementation 'junit:junit:4.13.2'
 
   // Default SLF4J binding.  Note that this is a blocking implementation.
   // See here for a non blocking appender http://logging.apache.org/log4j/2.x/manual/async.html
-  runtime 'org.slf4j:slf4j-simple:1.7.25'
+  runtimeOnly 'org.slf4j:slf4j-simple:1.7.36'
+  runtimeOnly 'org.slf4j:slf4j-api:1.7.36'
 
-  testCompile("org.spockframework:spock-core:1.1-groovy-2.4"){
+  // testImplementation("org.spockframework:spock-core:1.2-groovy-2.5"){ exclude module: "groovy-all" }
+  testImplementation("org.spockframework:spock-core:2.0-groovy-3.0"){
     exclude module: "groovy-all"
   }
+}
+
+tasks.named('test') {
+    // Use JUnit Platform for unit tests.
+    useJUnitPlatform()
 }
